--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "latexserver",
   "version": "0.0.0",
   "description": "API server for compiling latex",
-  "main": "server.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd frontend && npm install",
-    "start": "jsdoc -c jsdoc.json -R README.md -r . -d doc && node build.js && nodemon server.js --ignore 'README.md' --ignore asset --ignore node_modules --ignore public --ignore frontend --ignore package.json"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "prestart": "npm run build",
+    "start": "node .",
+    "test": "npm run build && jest",
+    "doc": "typedoc src",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -29,14 +33,23 @@
   "dependencies": {
     "checkpath": "^1.0.7",
     "child-process-promise": "^2.2.1",
+    "config": "^3.2.4",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "fs-extra": "^8.1.0",
     "jsdoc": "^3.6.3",
     "nodemon": "^2.0.2",
-    "okitchen": "0.0.6",
     "rimraf": "^3.0.0",
     "unzipper": "^0.10.5"
+  },
+  "devDependencies": {
+    "@types/config": "0.0.36",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.1.6",
+    "ts-jest": "^24.3.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   }
 }
